--- a/final/pages/FAQ.html
+++ b/final/pages/FAQ.html
@@ -4,18 +4,18 @@
     <meta charset="UTF-8">
     <title>Socks</title>
     <style>
-    @import "../css/title.css";
-    @import "../css/FAQ.css";
+    @import "../assets/css/title.css";
+    @import "../assets/css/FAQ.css";
     </style>
 </head>
 <body>
     <!--hearder start -->
     <header>
-    <img src="../img/logo.png" width="10%" style="float: left;">
+    <img src="../assets/img/logo.png" width="10%" style="float: left;">
         <div class="page">
           <nav class="menu">
             <ul class="menu__list">
-                <li class="menu__group"><a href="index.html" class="menu__link">HOME</a></li>
+                <li class="menu__group"><a href="../index.html" class="menu__link">HOME</a></li>
                     <div class="dropdown">
                         <li class="menu__group"><a href="menu.html" class="menu__link" style="padding-left: 155px;padding-right: 155px;">MENU</a>
                             <div class="dropdown-content">
@@ -88,7 +88,7 @@
                             </div>
                             <div class="hr"></div>
                             <div class="foot-lnk">
-                                <a href="#forgot">Forgot Password?</a>
+                                <a href="forgot.html">Forgot Password?</a>
                             </div>
                         </div>
                     </form>
@@ -144,36 +144,36 @@
 
         <div class="chat">
             <div class="container">
-                <img src="../img/user.jpg" style="margin-top: 0px" >
+                <img src="../assets/img/user.jpg" style="margin-top: 0px" >
                 <p>有瑕疵可以退貨嗎?</p>
             </div>
 
             <div class="container darker">
-                <img src="../img/logo.png" class="right">
+                <img src="../assets/img/logo.png" class="right">
                 <p style="padding-left: 120px;">如所購買的商品在商品鑑賞期內,若有商品品質問題·建議您申請退貨。<br><br>
                 1.因顯示器不同而產生的色差、皮料厚薄爭議(個人定義不同無法鑒別)織法、手感、衣服細節方面的問題不屬於品質瑕疵問題。<br><br>
                 2.因款式、顏色及個人主觀意願和喜好變化等因素申請退貨,不屬於商品瑕疵問題。</p>
             </div>
 
             <div class="container">
-                <img src="../img/user.jpg"  style="margin-top: 0px" >
+                <img src="../assets/img/user.jpg"  style="margin-top: 0px" >
                 <p>如何換貨?</p>
             </div>
 
             <div class="container darker">
-                <img src="../img/logo.png" class="right"> 
+                <img src="../assets/img/logo.png" class="right"> 
                 <p style="padding-left: 120px;">Socks不提供換貨服務。顧客如需更換商品,請按照退貨流程操作,並重新訂購。<br><br>
                 再次提醒您,猶豫期非試用期,若您收到商品經檢視後有任何不合意之處,請勿立即使用,並請依照退貨規定辦理退貨。<br><br>
                 當您申請退貨後・請主動向物流人員索取單據,並保留至退貨完成,以利日後查詢。</p>
             </div>
 
             <div class="container">
-                <img src="../img/user.jpg" style="margin-top: 0px"  >
+                <img src="../assets/img/user.jpg" style="margin-top: 0px"  >
                 <p>一定要有會員才能購買嗎?</p>
             </div>
 
             <div class="container darker">
-                <img src="../img/logo.png" class="right" style="margin-top: 20px">
+                <img src="../assets/img/logo.png" class="right" style="margin-top: 20px">
                 <p style="padding-left: 120px;">沒錯一定要先申請成為會員後才可以進行購買也會有紅利點數的福利。</p>
             </div>
 
@@ -201,18 +201,18 @@
             <table  width="60%" style="margin-left: 100px;" >
                 <tr>
                     <td>
-                        <img src="../img/k.jpg" width="60%">
+                        <img src="../assets/img/h.jpg">
                     </td>
                     <td>
-                        <img src="../img/k.jpg" width="60%">
+                        <img src="../assets/img/k.jpg">
                     </td>
                 </tr>
                 <tr>
                     <td>
-                        <img src="../img/k.jpg" width="60%">
+                        <img src="../assets/img/p.jpg">
                     </td>
                     <td>
-                        <img src="../img/k.jpg" width="60%">
+                        <img src="../assets/img/y.jpg">
                     </td>
                 </tr>
             </table>
@@ -246,8 +246,8 @@
 
     <!--java script-->
     <script src="https://kit.fontawesome.com/a076d05399.js"></script>
-    <script src="../js/sign.js" ></script>
-    <script src="../js/letters.js"></script>
+    <script src="../assets/js/sign.js" ></script>
+    <script src="../assets/js/letters.js"></script>
 
 </body>
 </html>
