--- a/final/pages/cart.html
+++ b/final/pages/cart.html
@@ -4,18 +4,18 @@
     <meta charset="UTF-8">
     <title>Socks</title>
     <style>
-    @import "../css/title.css";
-    @import "../css/cart.css";
+    @import "../assets/css/title.css";
+    @import "../assets/css/cart.css";
     </style>
 </head>
 <body>
     <!--hearder start -->
     <header>
-    <img src="../img/logo.png" width="10%" style="float: left;">
+    <img src="../assets/img/logo.png" width="10%" style="float: left;">
         <div class="page">
           <nav class="menu">
             <ul class="menu__list">
-                <li class="menu__group"><a href="index.html" class="menu__link">HOME</a></li>
+                <li class="menu__group"><a href="../index.html" class="menu__link">HOME</a></li>
                     <div class="dropdown">
                         <li class="menu__group"><a href="menu.html" class="menu__link" style="padding-left: 155px;padding-right: 155px;">MENU</a>
                             <div class="dropdown-content">
@@ -88,7 +88,7 @@
                             </div>
                             <div class="hr"></div>
                             <div class="foot-lnk">
-                                <a href="#forgot">Forgot Password?</a>
+                                <a href="forgot.html">Forgot Password?</a>
                             </div>
                         </div>
                     </form>
@@ -146,7 +146,7 @@
                         <th scope="row" height="110px">1</th>
                         <td width="20%">Champion 白色長襪</td>
                         <td style="width: 25%;" >
-                            <img src="../img/pro1-1.jpg" style="width: 25%;">
+                            <img src="../assets/img/pro1-1.jpg" style="width: 25%;">
                         </td>
                         <td>$200</td>
                         <td>1</td>
@@ -157,16 +157,19 @@
                         <th scope="row" height="110px">2</th>
                         <td width="20%">Champion 黑色長襪</td>
                         <td style="width: 25%;" >
-                            <img src="../img/pro1-2.jpg" style="width: 25%;">
+                            <img src="../assets/img/pro1-2.jpg" style="width: 25%;">
                         </td>
                         <td>$200</td>
                         <td>1</td>
                         <td>$200</td>
-                        <td><a href="loader.html"><i class="fas fa-trash" ></i></a></td>
+                        <td><form action=""><button class="delbtn" type="submit"><i class="fas fa-trash" ></i></button> <input name="op" value="del" hidden></form></td>
                     </tr>
                 </tbody>
             </table>
-            <a href="loader.html"><button class="clearbtn">清空購物車</button></a>
+			<form action="../assets/pages/addcar.jsp">
+            <button class="clearbtn" type="submit">清空購物車</button>
+			<input name="op" value="clear" hidden>
+			</form>
         </div>
 
         <div class="wrapper">
@@ -186,6 +189,10 @@
                         <div>
                             <font color="red">*</font><label for="city">住址</label>
                             <input type="text" name="city" required>
+                        </div>
+                        
+                        <div>
+                            &nbsp;&nbsp;消費金額:400元
                         </div>
                     </div>
                     <h1>
@@ -257,18 +264,18 @@
             <table  width="60%" style="margin-left: 100px;" >
                 <tr>
                     <td>
-                        <img src="../img/k.jpg" width="60%">
+                        <img src="../assets/img/h.jpg">
                     </td>
                     <td>
-                        <img src="../img/k.jpg" width="60%">
+                        <img src="../assets/img/k.jpg">
                     </td>
                 </tr>
                 <tr>
                     <td>
-                        <img src="../img/k.jpg" width="60%">
+                        <img src="../assets/img/p.jpg">
                     </td>
                     <td>
-                        <img src="../img/k.jpg" width="60%">
+                        <img src="../assets/img/y.jpg">
                     </td>
                 </tr>
             </table>
@@ -302,7 +309,7 @@
 
     <!--java script-->
     <script src="https://kit.fontawesome.com/a076d05399.js"></script>
-    <script src="../js/sign.js" ></script>
-    <script src="../js/letters.js"></script>
+    <script src="../assets/js/sign.js" ></script>
+    <script src="../assets/js/letters.js"></script>
 </body>
 </html>
