--- a/final/pages/loader.html
+++ b/final/pages/loader.html
@@ -1,11 +1,10 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <title>Socks</title>
     <style>
-        @import "../css/loader.css";
+        @import "../assets/css/loader.css";
     </style>
 </head>
 <body>
@@ -17,7 +16,7 @@
             <div class="shadow"></div>
             <div class="shadow"></div>
             <span>Loading</span>
-            <meta http-equiv="refresh" content="1.5; url=index.html">
+            <meta http-equiv="refresh" content="1.5; url=../index.html">
         </div>
             
 </body>
