--- a/final/pages/manager.html
+++ b/final/pages/manager.html
@@ -4,18 +4,18 @@
     <meta charset="UTF-8">
     <title>Socks</title>
     <style>
-    @import "../css/title.css";
-    @import "../css/manager.css";
+    @import "../assets/css/title.css";
+    @import "../assets/css/manager.css";
     </style>
 </head>
 <body>
     <!--hearder start -->
     <header>
-    <img src="../img/logo.png" width="10%" style="float: left;">
+    <img src="../assets/img/logo.png" width="10%" style="float: left;">
         <div class="page">
           <nav class="menu">
             <ul class="menu__list">
-                <li class="menu__group"><a href="index.html" class="menu__link">HOME</a></li>
+                <li class="menu__group"><a href="../index.html" class="menu__link">HOME</a></li>
                     <div class="dropdown">
                         <li class="menu__group"><a href="menu.html" class="menu__link" style="padding-left: 155px;padding-right: 155px;">MENU</a>
                             <div class="dropdown-content">
@@ -88,7 +88,7 @@
                             </div>
                             <div class="hr"></div>
                             <div class="foot-lnk">
-                                <a href="#forgot">Forgot Password?</a>
+                                <a href="forgot.html">Forgot Password?</a>
                             </div>
                         </div>
                     </form>
@@ -211,7 +211,7 @@
                             <td width="25%"><input type="text" value="Champion 白色長襪" class="text"></td>
                             <td width="12%"><input type="text"  value="$200" class="text" style="width: 100px;"></td>
                             <td width="12%"><input type="text" value="100" class="text" style="width: 100px;"></td>
-                            <td width="20%"><input type="text" value="../img/pro1-1.jpg" class="text" style="width: 210px;"> </td>
+                            <td width="20%"><input type="text" value="../assets/img/pro1-1.jpg" class="text" style="width: 210px;"> </td>
                             <td width="15%"><input type="text" value="Champion" class="text" style="width: 150px;"></td>
                             <td><button tyle="submit" class="memberbtn"><i class="fas fa-wrench"></i></button></td>
                             <td><button tyle="submit" class="memberbtn"><i class="fas fa-trash" ></i></button></td>
@@ -221,7 +221,7 @@
                             <td width="25%"><input type="text" value="Champion 黑色長襪" class="text"></td>
                             <td width="12%"><input type="text"  value="$200" class="text" style="width: 100px;"></td>
                             <td width="12%"><input type="text" value="100" class="text" style="width: 100px;"></td>
-                            <td width="20%"><input type="text" value="../img/pro1-2.jpg" class="text" style="width: 210px;"> </td>
+                            <td width="20%"><input type="text" value="../assets/img/pro1-2.jpg" class="text" style="width: 210px;"> </td>
                             <td width="15%"><input type="text" value="Champion" class="text" style="width: 150px;"></td>
                             <td><button tyle="submit" class="memberbtn"><i class="fas fa-wrench"></i></button></td>
                             <td><button tyle="submit" class="memberbtn"><i class="fas fa-trash" ></i></button></td>
@@ -380,18 +380,18 @@
             <table  width="60%" style="margin-left: 100px;" >
                 <tr>
                     <td>
-                        <img src="../img/k.jpg" width="60%">
+                        <img src="../assets/img/h.jpg">
                     </td>
                     <td>
-                        <img src="../img/k.jpg" width="60%">
+                        <img src="../assets/img/k.jpg">
                     </td>
                 </tr>
                 <tr>
                     <td>
-                        <img src="../img/k.jpg" width="60%">
+                        <img src="../assets/img/p.jpg">
                     </td>
                     <td>
-                        <img src="../img/k.jpg" width="60%">
+                        <img src="../assets/img/y.jpg">
                     </td>
                 </tr>
             </table>
@@ -425,10 +425,10 @@
 
     <!--java script-->
     <script src="https://kit.fontawesome.com/a076d05399.js"></script>
-    <script src="../js/sign.js" ></script>
-    <script src="../js/letters.js"></script>
-    <script src="../js/select.js"></script>
-    <script src="../js/tab.js"></script>
+    <script src="../assets/js/sign.js" ></script>
+    <script src="../assets/js/letters.js"></script>
+    <script src="../assets/js/select.js"></script>
+    <script src="../assets/js/tab.js"></script>
 
 </body>
 </html>
