--- a/final/pages/menu.html
+++ b/final/pages/menu.html
@@ -4,18 +4,18 @@
     <meta charset="UTF-8">
     <title>Socks</title>
     <style>
-    @import "../css/title.css";
-    @import "../css/menu.css";
+    @import "../assets/css/title.css";
+    @import "../assets/css/menu.css";
     </style>
 </head>
 <body>
     <!--hearder start -->
     <header>
-    <img src="../img/logo.png" width="10%" style="float: left;">
+    <img src="../assets/img/logo.png" width="10%" style="float: left;">
         <div class="page">
           <nav class="menu">
             <ul class="menu__list">
-                <li class="menu__group"><a href="index.html" class="menu__link">HOME</a></li>
+                <li class="menu__group"><a href="../index.html" class="menu__link">HOME</a></li>
                     <div class="dropdown">
                         <li class="menu__group"><a href="menu.html" class="menu__link" style="padding-left: 155px;padding-right: 155px;">MENU</a>
                             <div class="dropdown-content">
@@ -88,7 +88,7 @@
                             </div>
                             <div class="hr"></div>
                             <div class="foot-lnk">
-                                <a href="#forgot">Forgot Password?</a>
+                                <a href="forgot.html">Forgot Password?</a>
                             </div>
                         </div>
                     </form>
@@ -143,14 +143,14 @@
         </table>
 
         <div class="all" style="margin-left:150px;">
-            <a href="pro1.html"><img src="../img/champion.jpg" width="450px" height="350px" style="margin-top:100px;margin-left:90px;"></a>
-            <a href="pro2.html"><img src="../img/dickies.jpg" width="450px" height="350px" style="margin-top:100px;margin-left:30px;"></a>
-            <a href="pro3.html"><img src="../img/nike.jpg" width="450px" height="350px" style="margin-top:100px;margin-left:30px;"></a>
+            <a href="pro1.html"><img src="../assets/img/champion.jpg" width="450px" height="350px" style="margin-top:100px;margin-left:90px;"></a>
+            <a href="pro2.html"><img src="../assets/img/dickies.jpg" width="450px" height="350px" style="margin-top:100px;margin-left:30px;"></a>
+            <a href="pro3.html"><img src="../assets/img/nike.jpg" width="450px" height="350px" style="margin-top:100px;margin-left:30px;"></a>
         </div>
 
         <div class="all" style="margin-left:150px;">
-            <a href="pro4.html"><img src="../img/fila.jpg" width="450px" height="350px" style="margin-top:100px;margin-left:350px;"></a>
-            <a href="pro5.html"><img src="../img/vans.jpg" width="450px" height="350px" style="margin-top:100px;margin-left:30px;"></a>
+            <a href="pro4.html"><img src="../assets/img/fila.jpg" width="450px" height="350px" style="margin-top:100px;margin-left:350px;"></a>
+            <a href="pro5.html"><img src="../assets/img/vans.jpg" width="450px" height="350px" style="margin-top:100px;margin-left:30px;"></a>
         </div>
     </main>
     <!--main end-->
@@ -175,18 +175,18 @@
             <table  width="60%" style="margin-left: 100px;" >
                 <tr>
                     <td>
-                        <img src="../img/k.jpg" width="60%">
+                        <img src="../assets/img/h.jpg">
                     </td>
                     <td>
-                        <img src="../img/k.jpg" width="60%">
+                        <img src="../assets/img/k.jpg">
                     </td>
                 </tr>
                 <tr>
                     <td>
-                        <img src="../img/k.jpg" width="60%">
+                        <img src="../assets/img/p.jpg">
                     </td>
                     <td>
-                        <img src="../img/k.jpg" width="60%">
+                        <img src="../assets/img/y.jpg">
                     </td>
                 </tr>
             </table>
@@ -220,8 +220,8 @@
 
     <!--java script-->
     <script src="https://kit.fontawesome.com/a076d05399.js"></script>
-    <script src="../js/sign.js" ></script>
-    <script src="../js/letters.js"></script>
+    <script src="../assets/js/sign.js" ></script>
+    <script src="../assets/js/letters.js"></script>
 
 </body>
 </html>
