--- a/final/pages/pro2.html
+++ b/final/pages/pro2.html
@@ -4,18 +4,18 @@
     <meta charset="UTF-8">
     <title>Socks</title>
     <style>
-    @import "../css/title.css";
-    @import "../css/product.css";
+    @import "../assets/css/title.css";
+    @import "../assets/css/product.css";
     </style>
 </head>
 <body>
     <!--hearder start -->
     <header>
-    <img src="../img/logo.png" width="10%" style="float: left;">
+    <img src="../assets/img/logo.png" width="10%" style="float: left;">
         <div class="page">
           <nav class="menu">
             <ul class="menu__list">
-                <li class="menu__group"><a href="index.html" class="menu__link">HOME</a></li>
+                <li class="menu__group"><a href="../index.html" class="menu__link">HOME</a></li>
                     <div class="dropdown">
                         <li class="menu__group"><a href="menu.html" class="menu__link" style="padding-left: 155px;padding-right: 155px;">MENU</a>
                             <div class="dropdown-content">
@@ -88,7 +88,7 @@
                             </div>
                             <div class="hr"></div>
                             <div class="foot-lnk">
-                                <a href="#forgot">Forgot Password?</a>
+                                <a href="forgot.html">Forgot Password?</a>
                             </div>
                         </div>
                     </form>
@@ -175,12 +175,12 @@
         </div>
 
         <div class="pro" style="margin-left:220px; ">
-            <a href="pro2-1.html"><img src="../img/pro2-1.jpg" class="proimg"></a>
-            <a href="pro2-2.html"><img src="../img/pro2-2.jpg" class="proimg"></a>
-            <a href="pro2-3.html"><img src="../img/pro2-3.jpg" class="proimg"></a>
-            <a href="pro2-4.html"><img src="../img/pro2-4.jpg" class="proimg"></a>
-            <a href="pro2-5.html"><img src="../img/pro2-5.jpg" class="proimg"></a>
-            <a href="pro2-6.html"><img src="../img/pro2-6.jpg" class="proimg"></a>
+            <a href="pro2-1.html"><img src="../assets/img/pro2-1.jpg" class="proimg"></a>
+            <a href="pro2-2.html"><img src="../assets/img/pro2-2.jpg" class="proimg"></a>
+            <a href="pro2-3.html"><img src="../assets/img/pro2-3.jpg" class="proimg"></a>
+            <a href="pro2-4.html"><img src="../assets/img/pro2-4.jpg" class="proimg"></a>
+            <a href="pro2-5.html"><img src="../assets/img/pro2-5.jpg" class="proimg"></a>
+            <a href="pro2-6.html"><img src="../assets/img/pro2-6.jpg" class="proimg"></a>
         </div>
     </main>
     <!--main end-->
@@ -205,18 +205,18 @@
             <table  width="60%" style="margin-left: 100px;" >
                 <tr>
                     <td>
-                        <img src="../img/k.jpg" width="60%">
+                        <img src="../assets/img/h.jpg">
                     </td>
                     <td>
-                        <img src="../img/k.jpg" width="60%">
+                        <img src="../assets/img/k.jpg">
                     </td>
                 </tr>
                 <tr>
                     <td>
-                        <img src="../img/k.jpg" width="60%">
+                        <img src="../assets/img/p.jpg">
                     </td>
                     <td>
-                        <img src="../img/k.jpg" width="60%">
+                        <img src="../assets/img/y.jpg">
                     </td>
                 </tr>
             </table>
@@ -250,8 +250,8 @@
 
     <!--java script-->
     <script src="https://kit.fontawesome.com/a076d05399.js"></script>
-    <script src="../js/sign.js" ></script>
-    <script src="../js/letters.js"></script>
+    <script src="../assets/js/sign.js" ></script>
+    <script src="../assets/js/letters.js"></script>
 
 
 </body>
