--- a/final/pages/user.html
+++ b/final/pages/user.html
@@ -4,19 +4,19 @@
     <meta charset="UTF-8">
     <title>Socks</title>
     <style>
-    @import "../css/title.css";
-    @import "../css/user.css";
-    @import "../css/product2.css";
+    @import "../assets/css/title.css";
+    @import "../assets/css/user.css";
+    @import "../assets/css/product2.css";
     </style>
 </head>
 <body>
     <!--hearder start -->
     <header>
-    <img src="../img/logo.png" width="10%" style="float: left;">
+    <img src="../assets/img/logo.png" width="10%" style="float: left;">
         <div class="page">
           <nav class="menu">
             <ul class="menu__list">
-                <li class="menu__group"><a href="index.html" class="menu__link">HOME</a></li>
+                <li class="menu__group"><a href="../index.html" class="menu__link">HOME</a></li>
                     <div class="dropdown">
                         <li class="menu__group"><a href="menu.html" class="menu__link" style="padding-left: 155px;padding-right: 155px;">MENU</a>
                             <div class="dropdown-content">
@@ -89,7 +89,7 @@
                             </div>
                             <div class="hr"></div>
                             <div class="foot-lnk">
-                                <a href="#forgot">Forgot Password?</a>
+                                <a href="forgot.html">Forgot Password?</a>
                             </div>
                         </div>
                     </form>
@@ -154,7 +154,7 @@
 
         <div class="member" >
             <div class="memberin">
-                <img src="../img/user.jpg" alt=""><br><br><br><br>
+                <img src="../assets/img/user.jpg" alt=""><br><br><br><br>
                 <div style="margin-left: 150px;">
                     會員帳號: test<br><br>
                     電子信箱: test@gmail.com<br><br>
@@ -184,11 +184,11 @@
         <form action="loader">
             <div class="member" >
                 <div class="memberin" >
-                    <img src="../img/user.jpg" alt=""><br><br><br><br>
+                    <img src="../assets/img/user.jpg" alt=""><br><br><br><br>
                     <div style="margin-left: 100px;">
-                        輸入舊密碼:<input type="text" style="margin-left: 10px;"> <br><br>
-                        輸入新密碼:<input type="text" style="margin-left: 10px;"><br><br>
-                        確認新密碼:<input type="text" style="margin-left: 10px;"><br><br>
+                        輸入舊密碼:<input type="password" style="margin-left: 10px;"> <br><br>
+                        輸入新密碼:<input type="password" style="margin-left: 10px;"><br><br>
+                        確認新密碼:<input type="password" style="margin-left: 10px;"><br><br>
                     </div>
                     <button type="submit" class="pswbtn">修改密碼</button>   
                 </div>           
@@ -312,45 +312,56 @@
             </tr>
         </table>
 
-        <div class="content" style="overflow-y:scroll; height: 550px;">
-            <img src="../img/user.jpg">
-            <p style="float: left;font-size: 26px;margin-top: 60px;">user</p>
-            <div class="rate">
-                <input type="radio" id="star5" name="rate" value="5" CHECKED/>
-                <label for="star5" title="text">5 stars</label>
-                <input type="radio" id="star4" name="rate" value="4" />
-                <label for="star4" title="text">4 stars</label>
-                <input type="radio" id="star3" name="rate" value="3" />
-                <label for="star3" title="text">3 stars</label>
-                <input type="radio" id="star2" name="rate" value="2" />
-                <label for="star2" title="text">2 stars</label>
-                <input type="radio" id="star1" name="rate" value="1"  />
-                <label for="star1" title="text">1 star</label>
-            </div>
-                <div class="board" style="width: 400px">
+        <div class="content" style="overflow-y:scroll; height: 550px;width:800px;">
+            <div style="height:450px;">
+                <div class="contentimg">
+                    <img src="../assets/img/user.jpg" >
+                </div>
+                <div class="rate" style="margin-top: 30px;" >
+                    <input type="radio" id="star5" CHECKED hidden/>
+                    <label for='star5' class='disabled'><i class='fas fa-star'></i></label>
+                    <input type="radio" id="star4" hidden/>
+                    <label for='star4' class='disabled'><i class='fas fa-star'></i></label>
+                    <input type="radio" id="star3" hidden/>
+                    <label for='star3' class='disabled'><i class='fas fa-star'></i></label>
+                    <input type="radio" id="star2" hidden/>
+                    <label for='star2' class='disabled'><i class='fas fa-star'></i></label>
+                    <input type="radio" id="star1" hidden/>
+                    <label for='star1' class='disabled'><i class='fas fa-star'></i></label>
+                </div>
+                <div class="contentname">
+                    user<br><br>            
+                    2020-05-31 00:12:45
+                </div>                           
+                <div class="board" style="width:500px;">
                     good
                 </div> 
-            <img src="../img/user.jpg">
-            <p style="float: left;font-size: 26px;margin-top: 60px;">user</p>
-            <!--content form-->
-            <form>
-            <div class="rate">
-                <input type="radio" id="star5" name="rate" value="5" CHECKED/>
-                <label for="star5" title="text">5 stars</label>
-                <input type="radio" id="star4" name="rate" value="4" />
-                <label for="star4" title="text">4 stars</label>
-                <input type="radio" id="star3" name="rate" value="3" />
-                <label for="star3" title="text">3 stars</label>
-                <input type="radio" id="star2" name="rate" value="2" />
-                <label for="star2" title="text">2 stars</label>
-                <input type="radio" id="star1" name="rate" value="1" />
-                <label for="star1" title="text">1 star</label>
             </div>
-                 <div class="board" style="width: 400px">
+            <div style="height:450px;">
+                <div class="contentimg">
+                    <img src="../assets/img/user.jpg" >
+                </div>
+                <div class="rate" style="margin-top: 30px;" >
+                    <input type="radio" id="star5" CHECKED hidden/>
+                    <label for='star5' class='disabled'><i class='fas fa-star'></i></label>
+                    <input type="radio" id="star4" hidden/>
+                    <label for='star4' class='disabled'><i class='fas fa-star'></i></label>
+                    <input type="radio" id="star3" hidden/>
+                    <label for='star3' class='disabled'><i class='fas fa-star'></i></label>
+                    <input type="radio" id="star2" hidden/>
+                    <label for='star2' class='disabled'><i class='fas fa-star'></i></label>
+                    <input type="radio" id="star1" hidden/>
+                    <label for='star1' class='disabled'><i class='fas fa-star'></i></label>
+                </div>
+                <div class="contentname">
+                    user<br><br>            
+                    2020-05-31 00:12:45
+                </div>                           
+                <div class="board" style="width:500px;">
                     nice
                 </div> 
-            </form>
-    </div>
+            </div>   
+        </div>
     </main>
     <!--main end-->
 
@@ -374,18 +385,18 @@
             <table  width="60%" style="margin-left: 100px;" >
                 <tr>
                     <td>
-                        <img src="../img/k.jpg" width="60%">
+                        <img src="../assets/img/h.jpg">
                     </td>
                     <td>
-                        <img src="../img/k.jpg" width="60%">
+                        <img src="../assets/img/k.jpg">
                     </td>
                 </tr>
                 <tr>
                     <td>
-                        <img src="../img/k.jpg" width="60%">
+                        <img src="../assets/img/p.jpg">
                     </td>
                     <td>
-                        <img src="../img/k.jpg" width="60%">
+                        <img src="../assets/img/y.jpg">
                     </td>
                 </tr>
             </table>
@@ -419,10 +430,10 @@
 
     <!--java script-->
     <script src="https://kit.fontawesome.com/a076d05399.js"></script>
-    <script src="../js/sign.js" ></script>
-    <script src="../js/letters.js"></script>
-    <script src="../js/select.js"></script>
-    <script src="../js/tab.js"></script>
+    <script src="../assets/js/sign.js" ></script>
+    <script src="../assets/js/letters.js"></script>
+    <script src="../assets/js/select.js"></script>
+    <script src="../assets/js/tab.js"></script>
 
 </body>
 </html>
