--- a/final/pages/pro1-4.html
+++ b/final/pages/pro1-4.html
@@ -132,6 +132,7 @@
             <img src="../assets/img/pro1-4.jpg">
             <div class="intr">
                 <p style=" font-size: 36px;">Champion中筒襪(白)</p>
+                <p style=" font-size: 20px;">Champion於1919年在紐約羅徹斯特創辦製造出耐穿、<br>耐洗及革新的產品聞名，其襪子也是不容小覷,便宜好穿!</p>               
                 <p style="color:red;font-size: 24px;">NT$580</p>
                 <p style="font-size: 24px;">庫存:100</p>
                 <!--buy form-->
