--- a/final/pages/pro2-5.html
+++ b/final/pages/pro2-5.html
@@ -132,6 +132,7 @@
             <img src="../assets/img/pro2-5.jpg">
             <div class="intr">
                 <p style=" font-size: 36px;">Dickies短襪</p>
+                <p style=" font-size: 20px;">Dickies最早是一家小型背帶褲公司是美國工作服業界的領導品牌。<br>最具代表性單品為工裝,但其襪子也是別具特色,潮人必備!</p>
                 <p style="color:red;font-size: 24px;">NT$480</p>
                 <p style="font-size: 24px;">庫存:100</p>
                 <!--buy form-->
