--- a/final/pages/pro3-2.html
+++ b/final/pages/pro3-2.html
@@ -132,6 +132,7 @@
             <img src="../assets/img/pro3-2.jpg">
             <div class="intr">
                 <p style=" font-size: 36px;">Nike長襪(白)</p>
+                <p style=" font-size: 20px;"> NIKE從來不是一個陌生的牌子,經典,大眾認同,絕對是您必備的襪子!<br>搭配vans old school滑板鞋更是經典穿搭,可運動可潮流!</p>
                 <p style="color:red;font-size: 24px;">NT$580</p>
                 <p style="font-size: 24px;">庫存:100</p>
                 <!--buy form-->
