--- a/final/pages/pro5-3.html
+++ b/final/pages/pro5-3.html
@@ -132,6 +132,7 @@
             <img src="../assets/img/pro5-3.jpg">
             <div class="intr">
                 <p style=" font-size: 36px;">Vans長襪(白)</p>
+                <p style=" font-size: 20px;">Vans是年輕極限運動愛好者和潮流人士認同歡迎的世界性品牌！<br>比較偏向於街頭穿搭的牌子.</p>
                 <p style="color:red;font-size: 24px;">NT$780</p>
                 <p style="font-size: 24px;">庫存:100</p>
                 <!--buy form-->
