--- a/final/pages/pro4-5.html
+++ b/final/pages/pro4-5.html
@@ -132,6 +132,7 @@
             <img src="../assets/img/pro4-5.jpg">
             <div class="intr">
                 <p style=" font-size: 36px;">FILA短襪</p>
+                <p style=" font-size: 20px;">FILA襪子也是經典中的經典!襪子有 m s兩種尺寸<br> 分別適合26~28及22~25的人穿.</p>
                 <p style="color:red;font-size: 24px;">NT$380</p>
                 <p style="font-size: 24px;">庫存:100</p>
                 <!--buy form-->
