--- a/final/index.html
+++ b/final/index.html
@@ -178,9 +178,12 @@
         </table>
 
         <div class="best" style="margin-left:380px">
-            <a href="#"><img src="assets/img/show1.jpg" class="bestimg"></a>
-            <a href="#"><img src="assets/img/show2.jpg" class="bestimg"></a>
-            <a href="#"><img src="assets/img/show3.jpg" class="bestimg"></a>
+            <img src="assets/img/no1.jpg" style="position:absolute;width:50px;height: 50px;" class="bestimg">
+            <a href="pages/pro4-1.html"><img src="assets/img/pro4-1.jpg" class="bestimg"></a>
+            <img src="assets/img/no2.jpg" style="position:absolute;width:50px;height: 50px;" class="bestimg">
+            <a href="pages/pro1-3.html"><img src="assets/img/pro1-3.jpg" class="bestimg"></a>
+            <img src="assets/img/no3.jpg" style="position:absolute;width:50px;height: 50px;" class="bestimg">
+            <a href="pages/pro2-2.html"><img src="assets/img/pro2-2.jpg" class="bestimg"></a>
         </div>
         
         <div class="best" style="margin-left:380px" align="center">
